--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -390,7 +390,6 @@
             .partner-button {
                 a:first-child {
                     margin-right: 20px;
-                    margin-bottom: 10px;
                 }
             }
             ul li {
